--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ node_modules/
 www/node_modules/
 build/webgazer.js
 build/webgazer.min.js
+www/data/src/WebGazerETRA2018Dataset_Release20180420/
+www/data/src/P*/
