--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/webgazer.js
 build/webgazer.min.js
 www/data/src/WebGazerETRA2018Dataset_Release20180420/
 www/data/src/P*/
+www/data/FramesDataset/
