--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ build/webgazer.min.js
 www/data/src/WebGazerETRA2018Dataset_Release20180420/
 www/data/src/P*/
 www/data/FramesDataset/
+*/participant_characteristics.csv
