--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ www/data/src/WebGazerETRA2018Dataset_Release20180420/
 www/data/src/P*/
 www/data/FramesDataset/
 */participant_characteristics.csv
+*__pycache__/
